manifests/media-entertainment/base/transmission/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
        - name: transmission
          image: "docker.io/haugene/transmission-openvpn:latest"
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 1
            tcpSocket:
              port: 9091
            timeoutSeconds: 2
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 2
            tcpSocket:
              port: 9091
            timeoutSeconds: 2
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - NET_ADMIN
            privileged: true
          volumeMounts:
            - mountPath: /data
              name: transmission-data
            - mountPath: /config
              name: transmission-config
          resources: {}
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: transmission-data
          persistentVolumeClaim:
            claimName: pvc-nfs-downloads
        - name: transmission-config
          persistentVolumeClaim:
            claimName: pvc-iscsi-transmission-config
