manifests/media-entertainment/base/transmission/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission
  labels:
    gateway: private
    app: transmission
spec:
  hostnames:
    - transmission.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: https
  rules:
    - backendRefs:
        - name: transmission
          port: 9091
